User admin and login page is added

--- a/CarRent/Views/Car/CarDetails.cshtml
+++ b/CarRent/Views/Car/CarDetails.cshtml
@@ -64,7 +64,7 @@
     </ul>
     <div class="d-flex justify-content-end gap-3">
 
-        <a href="@Url.Action("CarDetails", "Car", new { Id = item.VehicleID })" class="btn btn-primary">Araç Detayları</a>
+        <a href="@Url.Action("Rezervation", "Car", new { Id = item.VehicleID })" class="btn btn-primary">Rezervasyon Detay</a>
     </div>
 </div>
 
