--- a/CarRent/Views/Account/Login.cshtml
+++ b/CarRent/Views/Account/Login.cshtml
@@ -12,14 +12,14 @@
         <div class="w3l-form-info">
             <div class="w3_info">
                 <h2>Giriş</h2>
-                <form action="#" method="post">
+                <form action="Verify" method="post">
                     <div class="input-group">
                         <span><i class="fas fa-user" aria-hidden="true"></i></span>
-                        <input type="email" placeholder="Username" required="">
+                        <input type="text" name="Username" placeholder="Username" required="">
                     </div>
                     <div class="input-group">
                         <span><i class="fas fa-key" aria-hidden="true"></i></span>
-                        <input type="Password" placeholder="Password" required="">
+                        <input type="Password" name="Password" placeholder="Password" required="">
                     </div>
                     <div class="form-row bottom">
                         <div class="form-check">
