--- a/CarRent/Views/Account/Login.cshtml
+++ b/CarRent/Views/Account/Login.cshtml
@@ -2,8 +2,9 @@
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
-
 }
+
+
 <div class="signinform">
     <h1>#HızlıKirala</h1>
     <!-- container -->
@@ -21,33 +22,9 @@
                         <span><i class="fas fa-key" aria-hidden="true"></i></span>
                         <input type="Password" name="Password" placeholder="Password" required="">
                     </div>
-                    <div class="form-row bottom">
-                        <div class="form-check">
-                            <input type="checkbox" id="remenber" name="remenber" value="remenber">
-                            <label for="remenber"> Remember me?</label>
-                        </div>
-                        <a href="#url" class="forgot">Forgot password?</a>
-                    </div>
-                    <button class="btn btn-primary btn-block" type="submit">Login</button>
+                    <button class="btn btn-primary btn-block" type="submit">Giriş</button>
                 </form>
-                <p class="continue"><span>or Login with</span></p>
-                <div class="social-login">
-                    <a href="#facebook">
-                        <div class="facebook">
-                            <span class="fab fa-facebook-f" aria-hidden="true"></span>
-                        </div>
-                    </a>
-                    <a href="#twitter">
-                        <div class="twitter">
-                            <span class="fab fa-twitter" aria-hidden="true"></span>
-                        </div>
-                    </a>
-                    <a href="#google">
-                        <div class="google">
-                            <span class="fab fa-google" aria-hidden="true"></span>
-                        </div>
-                    </a>
-                </div>
+
                 <p class="account">Don't have an account? <a href="#signup">Sign up</a></p>
             </div>
         </div>
@@ -57,8 +34,7 @@
     <!-- footer -->
     <div class="footer">
         <p>
-            &copy; 2020 Service login form. All Rights Reserved | Design by <a href="https://w3layouts.com/"
-                                                                               target="blank">W3layouts</a>
+            &copy; 2024 #HızlıKirala
         </p>
     </div>
     <!-- footer -->
@@ -66,3 +42,5 @@
 
 <!-- fontawesome v5-->
 <script src="js/fontawesome.js"></script>
+
+
