--- a/CarRent/Views/Car/Rezervation.cshtml
+++ b/CarRent/Views/Car/Rezervation.cshtml
@@ -1,7 +1,23 @@
-﻿
+﻿@model  CarRent.Models.ViewModels.ReservationModel
+
 @{
     ViewBag.Title = "Rezervation";
 }
+
+
+
+<h2>Vehicle Images</h2>
+<ul>
+
+
+
+        <li>@Model.CompanyName - @Model.Address</li>
+
+    
+</ul>
+
+<h2>Reservations</h2>
+
 
 <h2>Rezervation</h2>
 
