--- a/CarRent/Views/Car/Rezervation.cshtml
+++ b/CarRent/Views/Car/Rezervation.cshtml
@@ -14,22 +14,33 @@
         <input class="form-control m-3" type="text" placeholder="Günlük Ücreti: @item.DailyRate">
         <input class="form-control m-3" type="text" placeholder="En erken müsaitlik zamanı: @item.AvailableFrom">
         <input class="form-control m-3" type="text" placeholder="En geç müsaitlik zamanı: @item.AvailableTo">
-        <p>Kiralamak istediğiniz tarih: </p>
+        <p>Aracı teslim tarihiniz: </p>
         <input type="text" class="form-control m-3" name="" id="datepicker" />
 
         <script>
             $(function () {
-                $("#datepicker").datepicker({ format: "dd/mm/yyyy" });
+                $("#datepicker").datepicker({
+                    format: "dd.mm.yyyy"
+                });
             });
         </script>
 
+        <div>
+            <p>Aracı bırakmak istediğiniz tarih:</p>
+            <input type="text" class="form-control m-3" name="" id="dropoff" />
+            <script>
+                $(function () {
+                    $("#dropoff").datepicker({ format: "dd.mm.yyyy" });
+                });
+            </script>
+        </div>
+
     </div>
+    @*@item.VehicleID*@
+    <a href="@Url.Action("Rezervation", "Car", new { Id = item.VehicleID})" class="btn btn-primary">Aracı Kirala</a>
+
 }
-
-
-
-@*
-    @ViewBag.UserID
+    @*@ViewBag.UserID
     @ViewBag.Username*@
 
 
