you're not allowed page

--- a/CarRent/Views/Account/isNotAllow.cshtml
+++ b/CarRent/Views/Account/isNotAllow.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
-    Layout = null;
+    Layout = null /*"~/Views/Shared/_Layout.cshtml"*/;
+
 }
 
 <!DOCTYPE html>
@@ -10,6 +11,14 @@
     <meta name="viewport" content="width=device-width" />
     <title>isNotAllow</title>
 </head>
+
+<style>
+    p {
+        font-weight: bold;
+        background-color: #ced4da;
+        padding: 16px 24px;
+    }
+</style>
 <body>
     <div>
         <p>Bu sayfa için Admin girişi gereklidir!</p>
