--- a/CarRent/Views/Shared/_Layout.cshtml
+++ b/CarRent/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             <a class="navbar-brand" href="#">
                 <i class="fa-solid fa-car-side"></i>
             </a>
-            @Html.ActionLink("#HızlıKirala", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("#HızlıKirala", "Index", "Car", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Gezintiyi aç/kapat" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
