--- a/CarRent/Views/Home/About.cshtml
+++ b/CarRent/Views/Home/About.cshtml
@@ -2,8 +2,18 @@
     ViewBag.Title = "About";
 }
 <main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+    <h2 id="title"></h2>
+    <h3>#HızlıKirala , biz kimiz?</h3>
 
-    <p>Use this area to provide additional information.</p>
+    <p>Makul fiyata , maksimum müşteri memnuyeti sağlayan , Araç kiralama firmalarıyla aracılık sağlayan bir kuruluşuz. </p>
+    <p>
+        Güncel araçlarımız için <a href="@Url.Action("Index", "Car")" >tıklayınız</a>.</p>
+
 </main>
+
+
+
+
+
+
+
