--- a/CarRent/Views/Home/Contact.cshtml
+++ b/CarRent/Views/Home/Contact.cshtml
@@ -1,19 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "İletişim";
 }
 <main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+    <h2 id="title">@ViewBag.Title</h2>
+    <h3>Lütfen sorularınız  ya da sorunlarınız için bizimle iletişime geçmekten çekinmeyin.</h3>
 
     <address>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399<br />
-        <abbr title="Phone">P:</abbr>
-        425.555.0100
-    </address>
-
-    <address>
-        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+        <strong>Mail:</strong>   <a href="#">hizlikirala@outlook.com</a><br />
+        <strong>Telefon :</strong> <a>0212 475 12 24</a>
     </address>
 </main>
