continue to vehicledetails and other sections

--- a/CarRent/Views/Car/VehicleFeatures.cshtml
+++ b/CarRent/Views/Car/VehicleFeatures.cshtml
@@ -6,21 +6,25 @@
 
 <h1>Araç Özellikleri</h1>
 
-@foreach (var item in Model)
-{
-    <div class="d-grid gap-3">
-        <img src="@Url.Content(item.ImagePath)" style="width:500px" class="rounded" alt="...">
+<div class="d-grid gap-3">
 
-        <ul class="list-group">
-            <li class="list-group-item">
-                <strong>Araç özellik</strong>&nbsp;
-                <span>@item.detailDescription&nbsp;</span>
-            </li>
-        </ul>
-    </div>
-}
+    <img src="@Url.Content(Model.First().ImagePath)" style="width:500px" class="rounded" alt="...">
 
+    @foreach (var item in Model)
+    {
 
+        <div class="d-grid gap-3">
+
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>@item.FeatureName</strong>&nbsp;
+                    <span>@item.detailDescription&nbsp;</span>
+                </li>
+            </ul>
+        </div>
+    }
+
+</div>
 
 
 
